--- a/style.css
+++ b/style.css
@@ -1,3 +1,26 @@
-h1{
-    color:orange
+.navbar{
+    background: orange;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+.navdiv{
+    display:flex;
+    align-items:center;
+    justify-content: space-between;
+}
+.logo a{
+    font-size: 55px;
+    font-weight: 800;
+    color: white;
+}
+li{
+    list-style: none;
+    display: inline-block;
+}
+li a{
+    color: whitesmoke;
+    font-size: 18px;
+    font-weight: bold;
+    margin-right: 25px;
 }
