--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .navbar{
-    background: orange;
+    background: #2A7B9B;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     padding-left: 15px;
     padding-right: 15px;
@@ -9,7 +9,7 @@
     align-items:center;
     justify-content: space-between;
 }
-.logo a{
+.logo {
     font-size: 55px;
     font-weight: 800;
     color: white;
@@ -23,4 +23,31 @@ li a{
     font-size: 18px;
     font-weight: bold;
     margin-right: 25px;
+}
+.main-content{
+    background-color: white;
+    padding: 40px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0,0,0,0.2);
+}
+.books{
+    display: grid;
+    grid-template-columns: repeat(5,1fr);
+    grid gap: 40px;
+    margin-top:40px;
+}
+.book{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+.book img{
+    max-width: 100px;
+    margin-bottom: 50px;
+}
+.book p{
+    margin-top: 5px;
+    font-weight: bold;
+    color:#2A7B9B;
 }
